[gd_scene load_steps=3 format=3 uid="uid://c46opjxqvwf5n"]

[ext_resource type="Theme" uid="uid://dged4041swr1" path="res://theme.tres" id="1_iry1s"]
[ext_resource type="Script" path="res://scripts/mod_container.gd" id="2_008ft"]

[node name="ModContainer" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_iry1s")
script = ExtResource("2_008ft")

[node name="ModNameLabel" type="Label" parent="."]
layout_mode = 2

[node name="ConfigureButton" type="Button" parent="."]
layout_mode = 2
text = "Configure"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
text = "Delete"

[node name="ToggleLabel" type="Label" parent="."]
layout_mode = 2
text = "Toggle on/off:"

[node name="Toggle" type="CheckButton" parent="."]
layout_mode = 2
button_pressed = true

[connection signal="pressed" from="ConfigureButton" to="." method="_on_configure_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="toggled" from="Toggle" to="." method="_on_toggle_toggled"]
